--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <header>
+      <a href="/"><h2>Quinn Dougherty</h2></a>
+    </header>
     <!-- your page content will be inserted here,
          see the default_content_selector option in soupault.conf -->
   </body>
