--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -4,11 +4,18 @@
     <title><!-- set automatically, see soupault.conf --></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+  <header>
+    <a href="/"><h2>Quinn Dougherty</h2></a>
+  </header>
   <body>
-    <header>
-      <a href="/"><h2>Quinn Dougherty</h2></a>
-    </header>
     <!-- your page content will be inserted here,
          see the default_content_selector option in soupault.conf -->
   </body>
+  <footer>
+    <ul>
+      <li><a href="https://github.com/quinn-dougherty">GitHub</a></li>
+      <li><a href="https://manifold.markets/Quinn">Manifold</a></li>
+      <li><a href="https://linkedin.com/in/quinn-dougherty">LinkedIn</a></li>
+    </ul>
+  </footer>
 </html>
