--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,9 @@
 <footer>
   <ul>
     <li><a href="https://github.com/quinn-dougherty">GitHub</a></li>
-    <li><a href="https://manifold.markets/Quinn">Manifold</a></li>
     <li><a href="https://linkedin.com/in/quinn-dougherty">LinkedIn</a></li>
+    <li>
+      <a href="https://lesswrong.com/users/quinn-dougherty">LessWrong</a>
+    </li>
   </ul>
 </footer>
