--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -4,18 +4,23 @@
     <title><!-- set automatically, see soupault.conf --></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <header>
-    <a href="/"><h2>Quinn Dougherty</h2></a>
-  </header>
   <body>
-    <!-- your page content will be inserted here,
+    <header>
+      <a href="/"><h2>Quinn Dougherty</h2></a>
+    </header>
+    <main>
+      <!-- your page content will be inserted here,
          see the default_content_selector option in soupault.conf -->
+    </main>
+    <footer>
+      <p>quinn.dougherty92 at gmail dot com</p>
+      <ul>
+        <li><a href="https://github.com/quinn-dougherty">GitHub</a></li>
+        <li><a href="https://linkedin.com/in/quinn-dougherty">LinkedIn</a></li>
+        <li>
+          <a href="https://lesswrong.com/users/quinn-dougherty">LessWrong</a>
+        </li>
+      </ul>
+    </footer>
   </body>
-  <footer>
-    <ul>
-      <li><a href="https://github.com/quinn-dougherty">GitHub</a></li>
-      <li><a href="https://manifold.markets/Quinn">Manifold</a></li>
-      <li><a href="https://linkedin.com/in/quinn-dougherty">LinkedIn</a></li>
-    </ul>
-  </footer>
 </html>
