--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -13,7 +13,7 @@
          see the default_content_selector option in soupault.conf -->
     </main>
     <footer>
-      <p>quinn.dougherty92 at gmail dot com</p>
+      <p>quinn.dougherty.forall at gmail dot com</p>
       <ul>
         <li><a href="https://github.com/quinn-dougherty">GitHub</a></li>
         <li><a href="https://linkedin.com/in/quinn-dougherty">LinkedIn</a></li>
